--- a/modal/modalSucesso.css
+++ b/modal/modalSucesso.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(128, 128, 128, 0.314);
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -13,6 +13,7 @@
 .modal-sucess {
     border-radius: 16px;
     background: var(--azulescura, #080B16);
+    margin: 20px;
 }
 
 .modal-sucess p {
