--- a/modal/modalSucesso.css
+++ b/modal/modalSucesso.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(128, 128, 128, 0.314);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
@@ -19,6 +19,7 @@
 .modal-sucess p {
     color: white;
     font-size: 30px;
+    margin: 20px;
 }
 
 .header-sucess-modal {
